--- a/AcademyApp/AcademyApp.iOS/AcademyApp.iOS.csproj
+++ b/AcademyApp/AcademyApp.iOS/AcademyApp.iOS.csproj
@@ -123,6 +123,9 @@
       <Version>10.0.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
+    <PackageReference Include="XFCustomControls">
+      <Version>1.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
