--- a/AcademyApp/AcademyApp/AcademyApp.csproj
+++ b/AcademyApp/AcademyApp/AcademyApp.csproj
@@ -25,5 +25,8 @@
     <EmbeddedResource Update="NewUser.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="SignUpPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
