--- a/AcademyApp/AcademyApp/AcademyApp.csproj
+++ b/AcademyApp/AcademyApp/AcademyApp.csproj
@@ -28,5 +28,8 @@
     <EmbeddedResource Update="SignUpPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="UserDetails.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
